# family-care-hackathon

./: .gitignore  CLAUDE.md  INFO.md  README.md  docker-compose.yml  init.sql  package-lock.json  package.json
.claude/agents/: nextjs-ui-builder.md
.github/workflows/: lint.yml
Test Data/: Dane_rodziny.JSON  Presentation.key
backend/: .gitignore  Dockerfile  alembic.ini  entrypoint.sh  main.py  models.py  pyproject.toml  requirements.txt  ruff.toml  schema.sql  schema_proposition.sql  test_pdf_parser.py  test_rotation.py  utils.py
backend/alembic/: env.py  script.py.mako
backend/controllers/: appointments.py  auth.py  upcoming_appointments.py
backend/tests/: test_appointments.py  test_hello.py  test_pdf_parser.py  test_pdf_parsing.py  test_rotation.py
frontend/: .dockerignore  .oxlintrc.json  .prettierignore  Dockerfile  middleware.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx
frontend/components/: app-sidebar.tsx  appointment-reminder-popup.tsx  appointments-data-table.tsx  appointments-table-columns.tsx  book-appointment-dialog.tsx  document-timeline.tsx  family-health-diagram.tsx  login-form.tsx  onboarding-form.tsx  profile-popup.tsx  upload-medical-record-dialog.tsx
mcp-server/: .env  Dockerfile  README.md  call_tools.py  claude_config_example.json  mcp_info.json  pyproject.toml  test_mcp.py  test_no_auth.py  test_real_call.py  test_tools.py
mcp-server/app/: __init__.py  config.py  main.py
mcp-server/app/mcp/: __init__.py  mcp.py
mcp-server/app/mcp/tools/: __init__.py  appointments.py  auth.py  upcoming.py
(+24 files in other folders)
