[project]
name = "family-care-mcp-server"
version = "0.1.0"
description = "MCP server for Family Care health management system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.12",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "httpx>=0.27.0",
    "python-dateutil>=2.9.0"
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1"
]

[tool.ruff]
line-length = 120
target-version = 'py312'

[tool.ruff.lint]
select = [
    "I",     # isort
    "F",     # pyflakes
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
]
ignore = []

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"